--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   provider: ^6.1.5+1
   audioplayers: ^6.5.1
+  rename: ^3.1.0
 
 dev_dependencies:
   flutter_test:
